[imu_esp32] Add i2c code

--- a/imu_esp32/.vscode/settings.json
+++ b/imu_esp32/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "C_Cpp.intelliSenseEngine": "Tag Parser"
+  "C_Cpp.intelliSenseEngine": "Tag Parser",
+  "files.associations": {
+    "array": "cpp",
+    "string": "cpp",
+    "string_view": "cpp"
+  }
 }
