--- a/imu_esp32/main/CMakeLists.txt
+++ b/imu_esp32/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.cpp" "wifi_helper.c" "wifi_helper.h"
+idf_component_register(SRCS "imu_lsm9ds1.cpp" "main.cpp" "wifi_helper.c" "wifi_helper.h" "imu_lsm9ds1.cpp" "imu_lsm9ds1.h"
                     INCLUDE_DIRS ".")
