--- a/imu_esp32/.vscode/settings.json
+++ b/imu_esp32/.vscode/settings.json
@@ -3,6 +3,8 @@
   "files.associations": {
     "array": "cpp",
     "string": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "*.ipp": "cpp",
+    "*.inc": "cpp"
   }
 }
