Add sphere lsm for mag calibration

--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -7,8 +7,9 @@ project(${ProjectName})
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(${ProjectName} main.cpp my_udp.cpp my_udp.h
+add_executable(${ProjectName} main.cpp type.h my_udp.cpp my_udp.h
     graph.cpp graph.h graph_scatter.cpp graph_scatter.h graph_object.cpp graph_object.h
+    lsm_sphere.cpp lsm_sphere.h
 )
 
 if (WIN32)
